--- a/cluster.yml
+++ b/cluster.yml
@@ -15,4 +15,20 @@
   roles:
   - etcd
 
+- hosts: flannel
+  gather_facts: False
+  remote_user: root
+  become: yes
+  become_method: sudo
+  roles:
+  - flannel
+
+- hosts: kube-master
+  gather_facts: False
+  remote_user: root
+  become: yes
+  become_method: sudo
+  roles:
+  - master
+
 
