--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -5,14 +5,14 @@
     dest={{BIN_DIR}} 
     state=directory mode=0740
 
-#- name: 下载 CFSSL
+#- name: 下载CFSSL
 #  get_url: url=https://pkg.cfssl.org/R1.2/{{item.src}} dest={{BIN_DIR}}/{{item.dest}} mode=0540
 #  with_items:
 #  - { src: 'cfssl_linux-amd64', dest: 'cfssl' } 
 #  - { src: 'cfssljson_linux-amd64', dest: 'cfssljson' } 
 #  - { src: 'cfssl-certinfo_linux-amd64', dest: 'cfssl-certinfo' }
 
-- name: 拷贝 CFSSL 二进制执行文件
+- name: 复制CFSSL二进制执行文件
   copy: 
     src={{CFSSL_DIR}}/{{item.src}} 
     dest={{BIN_DIR}}/{{item.dest}} 
@@ -25,11 +25,11 @@
 - name: 创建/etc/kubernetes/ssl目录
   file: 
     dest=/etc/kubernetes/ssl 
-    state=directory mode=0740
+    state=directory mode=0640
 
 - name: 分发CA证书
   copy: 
-    src={{CA_DIR}}/{{item}} 
+    src={{CA_DIR}}/{{item}}
     dest=/etc/kubernetes/ssl/{{item}}
   with_items:
   - ca-config.json
