finish base k8s cluster ansible playbook

--- a/cluster.yml
+++ b/cluster.yml
@@ -31,4 +31,15 @@
   roles:
   - master
 
+- hosts: kube-node
+  gather_facts: False
+  remote_user: root
+  become: yes
+  become_method: sudo
+  roles:
+  - node
+
+
+
+
 
