--- a/roles/master/tasks/main.yml
+++ b/roles/master/tasks/main.yml
@@ -51,6 +51,7 @@
   service: 
     name=docker 
     state=restarted  
+    enabled=yes
 
 - name: 复制kubectl二进制执行文件
   copy:
@@ -141,6 +142,40 @@
     src=kube-apiserver.service.j2 
     dest=/etc/systemd/system/kube-apiserver.service
 
+- name: 重新加载 systemd
+  command: systemctl daemon-reload
+
+- name: 启动kube-apiserver
+  service: 
+    name=kube-apiserver
+    state=restarted
+    enabled=yes
+
+- name: 创建kube-controller-manager.service文件
+  template: 
+    src=kube-controller-manager.service.j2 
+    dest=/etc/systemd/system/kube-controller-manager.service
+
+- name: 启动kube-controller-manager
+  service: 
+    name=kube-controller-manager
+    state=restarted
+    enabled=yes
+
+- name: 创建kube-scheduler.service文件
+  template: 
+    src=kube-scheduler.service.j2 
+    dest=/etc/systemd/system/kube-scheduler.service
+
+- name: 重新加载 systemd
+  command: systemctl daemon-reload
+
+- name: 启动kube-scheduler.service
+  service: 
+    name=kube-scheduler
+    state=restarted
+    enabled=yes
+
 - name: 清除临时文件
   file:
     path="{{item}}"
@@ -155,38 +190,6 @@
   - kubernetes.pem
   - kubernetes-key.pem
   - token.csv
-   
-- name: 重新加载 systemd
-  command: systemctl daemon-reload
-
-- name: 启动kube-apiserver
-  service: 
-    name=kube-apiserver
-    state=restarted
-
-- name: 创建kube-controller-manager.service文件
-  template: 
-    src=kube-controller-manager.service.j2 
-    dest=/etc/systemd/system/kube-controller-manager.service
-
-- name: 启动kube-controller-manager
-  service: 
-    name=kube-controller-manager
-    state=restarted
-
-- name: 创建kube-scheduler.service文件
-  template: 
-    src=kube-scheduler.service.j2 
-    dest=/etc/systemd/system/kube-scheduler.service
-
-- name: 重新加载 systemd
-  command: systemctl daemon-reload
-
-- name: 启动kube-scheduler.service
-  service: 
-    name=kube-scheduler
-    state=restarted
-
  
 
 
