--- a/test.yml
+++ b/test.yml
@@ -1,12 +1,11 @@
 ---
 
-- hosts: node1
+- hosts: ansible
   gather_facts: False
   remote_user: root
   become: yes
   become_method: sudo
   
   tasks:
-    - name: 创建kubelet bootstrapping kubeconfig文件(1) 设置集群参数
-      shell: "{{BIN_DIR}}/kubectl config set-cluster kubernetes --certificate-authority=/etc/kubernetes/ssl/ca.pem --embed-certs=true --server={{KUBE_APISERVER}} --kubeconfig=bootstrap.kubeconfig"
-
+    - name: 读取日志
+      command: "tail -f /root/output"
