--- a/uninstall.yml
+++ b/uninstall.yml
@@ -1,6 +1,6 @@
 ---
 
-- hosts: node
+- hosts: kube-node
   gather_facts: False
   remote_user: root
   become: yes
@@ -10,20 +10,107 @@
     - name: 停相关进程
       service:      
         name={{item}}
-        state=stop
+        state=stopped
         enabled=no
       with_items:
       - kubelet
       - kube-proxy
       - flanneld
       - docker
+      ignore_errors: yes
 
-    - name: umount kubelet 挂载的目录
-      command: "mount | grep '/var/lib/kubelet'| awk '{print $3}'|xargs sudo umount"
-
-    - name:  删除kubelet工作目录
+    - name:  删除相关目录和文件
       file:
-        path=/var/lib/kubelet
+        path={{item}}
         state=absent
+      with_items:
+      - /var/lib/kubelet
+      - /var/lib/docker
+      - /var/run/flannel
+      - /var/run/docker/
+      - /etc/systemd/system/kubelet.service
+      - /etc/systemd/system/docker.service
+      - /etc/systemd/system/flanneld.service
+      - "{{BIN_DIR}}/kubelet"
+      - "{{BIN_DIR}}/docker"
+      - "{{BIN_DIR}}/flanneld"
+      - /etc/flanneld
+      - /etc/kubernetes
+      - /root/.kube
  
+    - name: 清理kube-proxy和docker创建的iptables
+      shell: "iptables -F && iptables -X && iptables -F -t nat && iptables -X -t nat"
+
+    - name: 删除flanneld创建的网桥
+      command: "ip link del flannel.1"
+      ignore_errors: yes
     
+    - name: 删除docker创建的网桥 
+      command: "ip link del docker0"
+      ignore_errors: yes
+
+- hosts: kube-master
+  gather_facts: False
+  remote_user: root
+  become: yes
+  become_method: sudo
+  
+  tasks:
+    - name: 停相关进程
+      service:      
+        name={{item}}
+        state=stopped
+        enabled=no
+      with_items:
+      - kube-apiserver
+      - kube-controller-manager
+      - kube-scheduler
+      - flanneld
+      ignore_errors: yes
+
+    - name:  删除相关目录和文件
+      file:
+        path={{item}}
+        state=absent
+      with_items:
+      - /var/run/kubernetes
+      - /var/run/flannel
+      - /etc/systemd/system/kube-apiserver.service
+      - /etc/systemd/system/kube-controller-manager.service
+      - /etc/systemd/system/kube-scheduler.service
+      - "{{BIN_DIR}}/kube-apiserver"
+      - "{{BIN_DIR}}/kube-controller-manager"
+      - "{{BIN_DIR}}/kube-scheduler}"
+      - "{{BIN_DIR}}/flanneld"
+      - /etc/flanneld
+      - /etc/kubernetes
+      - /root/.kube
+ 
+- hosts: etcd
+  gather_facts: False
+  remote_user: root
+  become: yes
+  become_method: sudo
+  
+  tasks:
+    - name: 停相关进程
+      service:      
+        name={{item}}
+        state=stopped
+        enabled=no
+      with_items:
+      - etcd
+      ignore_errors: yes
+
+    - name:  删除相关目录和文件
+      file:
+        path={{item}}
+        state=absent
+      with_items:
+      - /var/lib/etcd
+      - /etc/systemd/system/etcd.service
+      - "{{BIN_DIR}}/etcd"
+      - /etc/etcd
+ 
+
+  
